Position bottom stuff as correctly according to window size
Small browser windows might see the stuff at the bottom overlap the displayed
data in a rather ugly way.  Position normally or fixed according to whether
the browser window is at least 800 px high or not.

--- a/public/css/rer.css
+++ b/public/css/rer.css
@@ -30,6 +30,7 @@ div.train {
 	display: table-row;
 	font-size: 25px;
 	padding: 5px;
+	background-color: #0c5da5;
 }
 
 div.train:nth-child(2n) {
@@ -133,17 +134,27 @@ div#disclaimer {
 
 
 div.subwindow {
-	position: fixed;
-	bottom: 4em;
-
 	border-top: 1px solid gray;
 	padding-top: 1em;
+	padding-bottom: 0.5em;
 	width: 100%;
 
 	font-size: 12px;
 
 	background-color: rgba(34, 34, 34, 0.8);
 	z-index: 1;
+}
+
+@media screen and (min-height: 800px) {
+	div.subwindow { 
+		position: fixed;
+		bottom: 4em;
+	}
+
+	div#footer {
+		position: fixed;
+		bottom: 1em;
+	}
 }
 
 div.subwindow p {
@@ -164,8 +175,7 @@ div.subwindow div.content {
 div#footer {
 	border-top: 1px solid gray;
 	padding-top: 1em;
-	position: fixed;
-	bottom: 1em;
+
 	width: 100%;
 	z-index: 1;
 	background-color: #222;
